fixed jumping of container on viewreview page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,13 @@
     pointer-events: none;
 }
 
+.pagination {
+    background-color: white;
+}
+
+.margin {
+    margin-bottom: 10px;
+}
 .heading {
     font-size: 2rem;
 }
